crates/middlenet-netrender-bridge/build_logs_bridge_v3.log
   Compiling middlenet-netrender-bridge v0.0.1 (C:\Users\mark_\Code\repos\graphshell\crates\middlenet-netrender-bridge)
warning: unnecessary parentheses around `match` scrutinee expression
  --> src\html_paint.rs:92:35
   |
92 |             let (r, g, b) = match (hue as u32) {
   |                                   ^          ^
   |
   = note: `#[warn(unused_parens)]` (part of `#[warn(unused)]`) on by default
help: remove these parentheses
   |
92 -             let (r, g, b) = match (hue as u32) {
92 +             let (r, g, b) = match hue as u32 {
   |

warning: `middlenet-netrender-bridge` (lib) generated 1 warning (run `cargo fix --lib -p middlenet-netrender-bridge` to apply 1 suggestion)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `blitz_traits`
  --> examples\smoke_html_paint.rs:34:5
   |
34 | use blitz_traits::shell::{ColorScheme, Viewport};
   |     ^^^^^^^^^^^^ use of unresolved module or unlinked crate `blitz_traits`
   |
   = help: if you wanted to use a crate named `blitz_traits`, use `cargo add blitz_traits` to add it to your `Cargo.toml`

For more information about this error, try `rustc --explain E0433`.
error: could not compile `middlenet-netrender-bridge` (example "smoke_html_paint") due to 1 previous error
